made minor CSS fixes, including alignment of username on top of posts

--- a/src/Post.css
+++ b/src/Post.css
@@ -30,4 +30,6 @@
 }
 
 .post__username  {
+    float: left;
+    margin-top: 18px;
 }
